added maths pqy 2022

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,9 @@ site_name: don't panic just breathe
 
 theme:
     name: 'material'
+    features:
+      - navigation.tracking
+      - navigation.path
     palette:
 
     # Light mode
