--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,7 @@ nav:
       - Ethics Topicwise PYQs: resources/ethics_essay/ethics_topicwise_pyq.md
     - General Studies 1 to 3:
       - GS1 Topicwise PYQs: resources/gs1_3/gs1_topicwise_pyqs.md
+      - GS2 Topicwise PYQs: resources/gs1_3/gs2_topicwise_pyqs.md
     - Maths PYQs Topicwise:
       - Modern: resources/maths_pyqs/topicwise/modern.md
     - Maths Notes:
